--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				<img
 					src="./assets/images/search-engine-optimization.jpg"
 					class="float-left"
+					alt="A notebook with SEO in a cloud printed on it on a table"
 				/>
 				<h2>Search Engine Optimization</h2>
 				<p>
@@ -49,6 +50,7 @@
 				<img
 					src="./assets/images/online-reputation-management.jpg"
 					class="float-right"
+					alt="A person using a laptop with a chart labeled 'Reputation' on it"
 				/>
 				<h2>Online Reputation Management</h2>
 				<p>
@@ -63,6 +65,7 @@
 				<img
 					src="./assets/images/social-media-marketing.jpg"
 					class="float-left"
+					alt="people around a table filled with various social media related words & icons"
 				/>
 				<h2>Social Media Marketing</h2>
 				<p>
@@ -76,7 +79,10 @@
 		<aside id="benefits">
 			<section class="benefit-lead">
 				<h3>Lead Generation</h3>
-				<img src="./assets/images/lead-generation.png" />
+				<img
+					src="./assets/images/lead-generation.png"
+					alt="lead generation logo"
+				/>
 				<p>
 					Inbound strategies for lead generation require less work for your
 					business, bringing customers directly to your website.
@@ -84,7 +90,10 @@
 			</section>
 			<section class="benefit-brand">
 				<h3>Brand Awareness</h3>
-				<img src="./assets/images/brand-awareness.png" />
+				<img
+					src="./assets/images/brand-awareness.png"
+					alt="brand awareness logo"
+				/>
 				<p>
 					Users find your business through paid and organic searches, increasing
 					the search ranking and visibility for your business.
@@ -92,7 +101,10 @@
 			</section>
 			<section class="benefit-cost">
 				<h3>Cost Management</h3>
-				<img src="./assets/images/cost-management.png" />
+				<img
+					src="./assets/images/cost-management.png"
+					alt="cost management logo"
+				/>
 				<p>
 					As the search ranking for your business increases, your advertising
 					costs decrease, and you no longer need to advertise your page.
