--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</header>
 		<div class="hero"></div>
 		<main id="content">
-			<section class="search-engine-optimization">
+			<section id="search-engine-optimization" class="info-card">
 				<img
 					src="./assets/images/search-engine-optimization.jpg"
 					class="float-left"
@@ -43,10 +43,7 @@
 					visibility and find the right customers for your business.
 				</p>
 			</section>
-			<section
-				id="online-reputation-management"
-				class="online-reputation-management"
-			>
+			<section id="online-reputation-management" class="info-card">
 				<img
 					src="./assets/images/online-reputation-management.jpg"
 					class="float-right"
@@ -61,7 +58,7 @@
 					business.
 				</p>
 			</section>
-			<section id="social-media-marketing" class="social-media-marketing">
+			<section id="social-media-marketing" class="info-card">
 				<img
 					src="./assets/images/social-media-marketing.jpg"
 					class="float-left"
@@ -77,7 +74,7 @@
 			</section>
 		</main>
 		<aside id="benefits">
-			<section class="benefit-lead">
+			<section class="benefit-card">
 				<h3>Lead Generation</h3>
 				<img
 					src="./assets/images/lead-generation.png"
@@ -88,7 +85,7 @@
 					business, bringing customers directly to your website.
 				</p>
 			</section>
-			<section class="benefit-brand">
+			<section class="benefit-card">
 				<h3>Brand Awareness</h3>
 				<img
 					src="./assets/images/brand-awareness.png"
@@ -99,7 +96,7 @@
 					the search ranking and visibility for your business.
 				</p>
 			</section>
-			<section class="benefit-cost">
+			<section class="benefit-card">
 				<h3>Cost Management</h3>
 				<img
 					src="./assets/images/cost-management.png"
