--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="./assets/css/style.css" />
 		<title>Horiseon - Social Solution Services</title>
+		<meta
+			name="description"
+			content="Horiseon is a social solution services company that helps businesses with search engine optimization, online reputation management, and social media marketing."
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 
 	<body>
